# wechat-rs

./: .gitignore  Cargo.toml
src/: .lib.rs.swp  client.rs  lib.rs  proto.rs  websocket.rs
src/websocket/: message.rs
