[package]
name = "wechat"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.17"
tungstenite = { version = "0.17", default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3"
pin-project = "1"
serde_repr = "0.1"
